# Scribe

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  mechanics.json
crates/scribe_core/: Cargo.toml
crates/scribe_core/src/: identity_mapper.rs  lib.rs  mechanics.rs
crates/scribe_core/src/models/: combat.rs  guild.rs  identity.rs  mod.rs  state.rs
crates/scribe_output/: Cargo.toml
crates/scribe_output/src/: lib.rs
crates/scribe_parser/: Cargo.toml
crates/scribe_parser/src/: events.rs  lib.rs
crates/scribe_sniffer/: Cargo.toml
crates/scribe_sniffer/src/: lib.rs  sfs.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs
docs/: mechanics.md
src/: main.rs
