[workspace]
members = [
    "crates/scribe_core",
    "crates/scribe_sniffer",
    "crates/scribe_parser",
    "crates/tui",
]

[package]
name = "scribe"
version = "0.1.0"
edition = "2024"

[dependencies]
scribe_core = { path = "crates/scribe_core" }
scribe_sniffer = { path = "crates/scribe_sniffer" }
scribe_parser = { path = "crates/scribe_parser" }
tui = { path = "crates/tui" }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.14"

